# resequence-twin-lab

./: .gitignore  README.md  docker-compose.yml
agent/: pyproject.toml  retrieval.py  server.py
agent/tests/: test_rest_tools.py  test_retrieval.py  test_server_skeleton.py
control/: pom.xml
control/src/main/resources/: application.properties
docs/adr/: ADR-001-routing-solver.md  ADR-002-sequencing-solver.md  ADR-003-scramble-forecast.md
docs/superpowers/plans/: 2026-06-17-kotlin-toolchain-leaf-enums.md  2026-06-17-live-pbs-state-machine.md  2026-06-17-pbs-trajectory-endpoint.md  2026-06-17-s2-kafka-streaming-metrics.md  2026-06-17-viz-usd-exporter.md  2026-06-18-cp-sat-optimality-gap.md  2026-06-18-drift-seam.md  2026-06-18-s3-python-streaming-producer.md  2026-06-18-s4-ditto-grafana.md
docs/superpowers/specs/: 2026-06-18-cp-sat-optimality-gap-design.md  2026-06-18-drift-seam-design.md
grafana/dashboards/: pbs-line.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
legacy-oht/: README.md
legacy-oht/control/bench/: BenchRegressionTest.java  BenchmarkRunner.java  BenchmarkRunnerTest.java  SimDiagnosticTest.java  SimRunner.java
legacy-oht/control/graph/: CongestionDetector.java  WaitForGraph.java  WaitForGraphTest.java
legacy-oht/control/routing/: CongestionAwarePolicy.java  CongestionAwarePolicyTest.java  Dispatcher.java  DispatcherTest.java  RoutingPolicy.java  StaticPolicy.java  StaticPolicyTest.java
legacy-oht/sim/: generator.py
legacy-oht/sim/layout/: auto.yaml
legacy-oht/sim/tests/: test_generator.py  test_generator_skeleton.py
model/: recipe-setpoints.yaml
prometheus/: prometheus.yml
research/: README.md  optimality-gap.md
sim/: paint_stream.py  pbs_stream_producer.py  pyproject.toml
sim/tests/: test_paint_stream.py  test_pbs_stream_producer.py  test_pbs_stream_producer_cli.py
solver/: pyproject.toml
solver/fixtures/: seed-1.json  seed-2024.json  seed-42.json  seed-7.json  seed-99.json
solver/solver/: fixture.py  model.py  optimality_gap.py
solver/tests/: test_fixture.py  test_gap_cli.py  test_model.py  test_regression.py  test_smoke.py
viz/: README.md  __init__.py  compare.py  export.py  pyproject.toml  render.py  schematic.py  usd_exporter.py
viz/tests/: conftest.py  test_compare.py  test_helpers.py  test_schematic.py  test_usd_exporter.py
(+104 files in other folders)
