[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resequence-twin-agent"
version = "0.0.1"
description = "resequence-twin MCP triage agent (Claude + RAG) — skeleton"
requires-python = ">=3.11"
dependencies = [
    # RAG = deterministic local retrieval; Claude is the MCP host (no embedded LLM dep)
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["server", "retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
