[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resequence-twin-sim"
version = "0.0.1"
description = "resequence-twin synthetic event generator (SimPy) — skeleton"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1.1",
    "kafka-python>=2.0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires external services (Kafka, Ditto) — skipped by default",
]
