[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resequence-twin-viz"
version = "0.0.1"
description = "resequence-twin OpenUSD exporter (PBS trajectory → .usda 3D twin) + CPU schematic GIF renderer"
requires-python = ">=3.11"
dependencies = [
    "usd-core>=23.11",
    "httpx>=0.27",
    # CPU schematic renderer (no GPU/viewer required)
    "matplotlib>=3.8",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["viz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
